--- a/config/locales/candidates.es.yml
+++ b/config/locales/candidates.es.yml
@@ -3,30 +3,30 @@ es:
     submission: Envío de lista de términos
     distilled: Conceptos distilados
     feedback_breakdown: >
-      Los terminos se evaluan utilizando las siguientes categorias. El promedio se
-      informa como desempeno.
+      Los términos se evaluan utilizando las siguientes categorias. El promedio se
+      informa como desempeño.
     list_for_class: Lista para la clase en
-    feedback_info_label: Informacion
+    feedback_info_label: Información
     credit:
       zero: sin puntos
-      one: un punto
+      one: 1 punto
       other: '%{count} points'
     review: 'Review: %{task}'
     enter: 'Enter terms: %{task}'
     play: 'Play Bingo: %{task}'
-    demo_term1: La dinamica de grupo
+    demo_term1: La dinámica de grupo
     demo_def1: Como trabajan juntos los miembros de un grupo 
-    demo_term2: Cooperacion
-    demo_def2: Dos o mas entidades que aplican sus habilidades para lograr un objetivo comun
-    demo_term3: Dinamica de grupo
-    demo_def3: La naturaleza de como los miembros del grupo interactuan entre si
+    demo_term2: Cooperación
+    demo_def2: Dos o más entidades que aplican sus habilidades para lograr un objetivo común
+    demo_term3: La dinámica de grupo
+    demo_def3: La naturaleza de como los miembros del grupo interactúan entre sí
     demo_term4: Grupo
     demo_def4: ''
-    demo_term5: Proceso de grupo
-    demo_def5: Los metodos y tecnicas que sigue un grupo
+    demo_term5: Proceso Grupal
+    demo_def5: Los métodos y tecnicas que sigue un grupo
     demo_term6: Equipo
     demo_def6: Un grupo de personas trabajando juntas
-    demo_review_topic: Simulaciones y juegos
+    demo_review_topic: Simulaciones y Juegos
     demo_review_description: >
       Lara, M., Myers, R., Frick, T. W., Aslan, S., & Michaelidou, T.
       (2010). A Design Case : Creating an Enhanced Version of the
@@ -39,7 +39,7 @@ es:
       review. International Journal of Educational Technology in Higher
       Education (Vol. 14). International Journal of Educational
       Technology in Higher Education.
-    demo_topic: Que es la colaboracion?
+    demo_topic: ¿Qué es la colaboración?
     demo_description: >
       Johnson, R. T., & Johnson, D. W. (1994). An overview of
       cooperative learning. In J. Thousand, A. Villa, & A. Nevin (Eds.),
